Fixes various bugs - Fixes animation bug by giving min width and height to router outlet - Fixes overflow bug for exercise add dialog - Updates router animation

--- a/src/app/dashboard/dashboard-home/dashboard-home.component.scss
+++ b/src/app/dashboard/dashboard-home/dashboard-home.component.scss
@@ -1,8 +1,9 @@
 main {
-    width: 100%;
-    height: 100%;
-    display: flex;
     align-items: center;
+    display: flex;
+    height: 100%;
     justify-content: center;
-    
+    min-width: 75vw;
+    min-height: calc(100vh - 66px);
+    width: 100%;
 }
