--- a/src/app/dashboard/dashboard/dashboard.scss
+++ b/src/app/dashboard/dashboard/dashboard.scss
@@ -61,6 +61,8 @@
 
         div.router-wrapper {
             flex: 1;
+            min-width: 75vw;
+            min-height: calc(100vh - 66px);
             position: relative;
             transition: all 100ms ease-in-out;
             z-index: 1;
@@ -68,6 +70,8 @@
             ::ng-deep router-outlet + * {
                 position: absolute;
                 height: 100%;
+                min-width: 75vw;
+                min-height: calc(100vh - 66px);
                 width: 100%;
                 overflow-y: scroll;
                 transition: all 200ms ease-in-out;
